--- a/Prototype-Premium/composer.json
+++ b/Prototype-Premium/composer.json
@@ -6,11 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "firebase/php-jwt": "^6.3",
         "guzzlehttp/guzzle": "^7.2",
+        "kreait/firebase-php": "^7.0",
         "laravel/breeze": "^1.16",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "paragonie/sodium_compat": "^1.19"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
